@@ -1,3 +1,8 @@
+2011-08-21  Valek Filippov
+
+		* Added "esc" command to parse 'Escher' blocks
+		* Handle nested BOFs in XLS; group records by Begin/End brackets
+
 2011-08-20  Valek Filippov
 
 		* Add 'reload' to re-read same file.
